--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Utslab by duongpm</title>
+    <title>IoT at UTS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,11 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Utslab</h1>
-      <h2 class="project-tagline"></h2>
-      <a href="https://github.com/duongpm/utslab" class="btn">View on GitHub</a>
-      <a href="https://github.com/duongpm/utslab/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/duongpm/utslab/tarball/master" class="btn">Download .tar.gz</a>
+      <h1 class="project-name">IoT at UTS</h1>
     </section>
 
     <section class="main-content">
