--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to IoT project of University of Technology Sydney.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the IoT project of University of Technology Sydney.</h3>
 
-<p>This page is intended for testing purpose of the IoT project at Advanced Control Lab, University of Technology Sydney.</p>
-
+<p>This page is intended for the testing purpose of our IoT project at Advanced Control Lab, University of Technology Sydney.</p>
+<p>If you are interested, please <a href="https://www.uts.edu.au/staff/manhduong.phung">contact us</a>.</p>
     </section>
 
   
